# dream-draw-desktop

./: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx  i18n.ts  index.css  tauri-api.ts  types.ts
src-tauri/: Cargo.toml  favorites-export-2  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: CustomSelect.tsx  EditorView.tsx  Header.tsx  PageGrid.tsx  UploadZone.tsx  index.ts
src/components/modals/: FavoritesModal.tsx  ImagePreviewModal.tsx  SettingsModal.tsx
src/constants/: index.ts
src/contexts/: AppContext.tsx
src/hooks/: useConfig.ts  useExportProgress.ts  useFiles.ts  useKeyboardShortcuts.ts  useProcessing.ts
src/services/: geminiService.ts
src/utils/: errors.ts  export.ts  favorites.ts  throttle.ts
