[package]
name = "dream-draw-desktop"
version = "2.4.2"
description = "dream-draw-desktop"
authors = ["惊蛰"]
edition = "2021"

[lib]
name = "dream_draw_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP 客户端
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }

# 工具库
base64 = "0.22"
regex = "1"

# 安全存储
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }

[profile.release]
panic = "abort"
strip = true
lto = true
opt-level = 3
codegen-units = 1
